Fixed bug - page picker set overflow:hidden to html after picking a page

--- a/SexyContent/EAV/Controls/ItemForm.css
+++ b/SexyContent/EAV/Controls/ItemForm.css
@@ -45,3 +45,5 @@ ul.eav-dimension-actions, .eav-dimension-actions ul, ul.eav-contextmenu-actions,
 .eav-gps-map-latitude, .eav-gps-map-longitude { width: 87px !important;}
 .eav-gps-map-actions input[type='button'] { background: none repeat scroll 0 0 #DDDDDD; border: 1px solid #BBBBBB; margin: 1px 2px 1px 6px; padding: 3px; }
 
+/* Fix bug - DNN page picker adds overflow:hidden to the HTML node after picking a page, so overwrite this */
+html { overflow:auto!important; }
